# serializer version: 1
# name: test_full_feed
  '''
  <?xml version='1.0' encoding='UTF-8'?>
  <rss xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" xmlns:podcast="https://podcastindex.org/namespace/1.0" xmlns:atom="http://www.w3.org/2005/Atom" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:media="http://search.yahoo.com/mrss/" xmlns:dcterms="http://purl.org/dc/terms/" xmlns:psc="http://podlove.org/simple-chapters" version="2.0">
    <channel>
      <title>Podcast title</title>
      <description><![CDATA[Podcast description]]></description>
      <link>https://example.com/episode.html</link>
      <language>en</language>
      <item>
        <title>Episode title</title>
        <enclosure url="https://example.com/audio.mp3" length="30000" type="audio/mpeg"/>
        <guid isPermaLink="false">12345678-1234-5678-1234-567812345678</guid>
        <link>https://example.com/episode.html</link>
        <pubDate>Fri, 20 Jun 2014 10:35:00 +0000</pubDate>
        <description><![CDATA[Episode description]]></description>
        <itunes:duration>4250</itunes:duration>
        <itunes:image href="https://example.com/episode.png"/>
        <itunes:explicit>false</itunes:explicit>
        <itunes:season>2</itunes:season>
        <itunes:episode>30</itunes:episode>
        <itunes:episodeType>full</itunes:episodeType>
        <podcast:transcript url="https://example.com/episode.vtt" type="text/vtt"/>
        <psc:chapters version="1.2">
          <chapter start="00:00:10.000" title="Episode chapter 1"/>
          <chapter start="00:02:00.000" title="Episode chapter 2" href="https://example.com/chapter.html"/>
        </psc:chapters>
      </item>
      <copyright>Copyright notice</copyright>
      <itunes:explicit>true</itunes:explicit>
      <itunes:image href="https://example.com/podcast.png"/>
      <itunes:author>Podcast author</itunes:author>
      <itunes:type>serial</itunes:type>
      <podcast:locked>no</podcast:locked>
      <podcast:guid>3595bd1c-50a4-504d-baf4-99de513b3737</podcast:guid>
      <podcast:txt purpose="verify">S6lpp-7ZCn8-dZfGc-OoyaG</podcast:txt>
      <atom:link href="https://example.com/canonical.rss" rel="self" type="application/rss+xml"/>
      <itunes:category text="TV &amp; Film">
        <itunes:category text="Film Reviews"/>
        <itunes:category text="Film Interviews"/>
      </itunes:category>
    </channel>
  </rss>
  
  '''
# ---
# name: test_minimal_feed
  '''
  <?xml version='1.0' encoding='UTF-8'?>
  <rss xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" xmlns:podcast="https://podcastindex.org/namespace/1.0" xmlns:atom="http://www.w3.org/2005/Atom" xmlns:content="http://purl.org/rss/1.0/modules/content/" xmlns:media="http://search.yahoo.com/mrss/" xmlns:dcterms="http://purl.org/dc/terms/" xmlns:psc="http://podlove.org/simple-chapters" version="2.0">
    <channel>
      <title>Podcast title</title>
      <description><![CDATA[Podcast description]]></description>
      <link>https://example.com/episode.html</link>
      <language>en</language>
      <item>
        <title>Episode title</title>
        <enclosure url="https://example.com/audio.mp3" length="30000" type="audio/mpeg"/>
        <guid isPermaLink="false">12345678-1234-5678-1234-567812345678</guid>
      </item>
      <itunes:explicit>false</itunes:explicit>
      <itunes:image href="https://example.com/podcast.png"/>
      <atom:link href="https://example.com/canonical.rss" rel="self" type="application/rss+xml"/>
    </channel>
  </rss>
  
  '''
# ---
